[tool.poetry]
name = "sneaker-shop"
version = "0.1.0"
description = ""
authors = ["Ilya Stepanov <ilya.stepanov.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
